# screenindex

./: .gitignore  README.md
apps/desktop/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.test.tsx  App.tsx
apps/desktop/src/renderer/src/assets/: main.css
apps/desktop/src/renderer/src/components/: SearchPanel.test.tsx  SearchPanel.tsx  Versions.tsx
apps/desktop/src/renderer/src/test/: setup.ts
engine/: CMakeLists.txt
engine/include/database/: embedding_repository.hpp  frame_repository.hpp  migrations.hpp  ocr_repository.hpp  search_service.hpp  sqlite_connection.hpp
engine/migrations/: 001_init.sql  002_frame_storage_keyframe_delta.sql
engine/src/database/: embedding_repository.cpp  migrations.cpp  ocr_repository.cpp  search_service.cpp  sqlite_connection.cpp
engine/test/: frame_repository_test.cpp  migrations_test.cpp  smoke_test.cpp  sqlite_connection_test.cpp
